# RookNet

./: .gitattributes  .gitignore  CHESS_AI_MASTER_PLAN.md  README.md  chess_cli.py  chess_gui.py  chess_lab_gui.py  chess_web_gui.py  dynamic_self_play.py  dynamic_self_play_broken.py  evaluate_model.py  full_log.txt  inspect_pgn_data.py  open_datasets.py  pyproject.toml  requirements.txt  run.py  setup.py  show_gui.py
.github/workflows/: ci.yml
configs/: config.v2.yaml  llm_config.json  scaled_config.yaml
docs/: refactor_plan.md
models/alpha_zero_checkpoints/: best_opponent.pt  latest_player.pt
src/engine/: alpha_zero_engine.py  base_engine.py  gemini_engine.py  gpu_inference_server.py  inference_helpers.py  stockfish_engine.py  uci_server.py
src/evaluation/: stats.py
src/models/: base_model.py  baseline.py  chess_transformer.py  mcts_transformer.py
src/search/: enhanced_mcts.py  mcts.py
src/training/: __init__.py  alphazero_trainer.py  enhanced_trainer.py  master_games_trainer.py  mcts_interface.py  self_play_rl.py  trainer.py  training_loop.py  worker.py
src/utils/: board_utils.py  chess_env.py  chess_utils.py  config_loader.py  config_schema.py  move_encoder.py  replay_buffer.py
static/js/: chess-interface.js
templates/: chess.html  index.html
tests/: test_chess_env_engine.py  test_chess_environment.py  test_config_loader.py  test_mcts.py  test_move_encoder.py  test_replay_buffer.py  test_training_loop.py  test_training_mcts_interface.py  test_training_worker.py
tools/: hopechess_proxy.py  iteration_watcher.py  migrate_policy_head.py  smoke_test_gpu_server.py
